Create assets folder with styles.css and script.js and link them to the html.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Crunch</title>
+    <!-- Links -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
