Add initial meta tags (description and keywords)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Quiz Crunch. Trivia Quiz. Test your trivia knowledge.">
+    <meta name="keywords" content="quiz, trivia, questions, knowledge, game, general knowledge">
     <title>Quiz Crunch</title>
     <!-- Links -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
     <header></header>
     <main></main>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
