Create sections and add welcome message

--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <h1>Quiz Crunch</h1>
+    </header>
+    <main>
+        <section id="welcome-section">
+            <h2>Welcome to Quiz Crunch!</h2>
+            <p>You can choose your quiz mode below.</p>
+            <p>Create your own quiz by selecting a category, difficulty and number of questions, or go for the gold in ,<em>High Score Mode</em>!</p>
+        </section>
+        <section id="choices-section"></section>
+        <section id="question-section"></section>
+        <section id="score-section"></section>
+    </main>
     <script src="assets/js/script.js"></script>
 </body>
 
