Add scores section html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <button type="button" id="play-btn">Let's Play!</button>
             </div>
             <div>
-                <h4>Question Number: <span   id="question-number">1</span></h4>
+                <h4>Question Number: <span id="question-number">1</span></h4>
                 <h3 id="question">Question goes here</h3>
                 <button id="answer1" class="answer-btn"></button>
                 <button id="answer2" class="answer-btn"></button>
@@ -73,7 +73,18 @@
                 <button id="answer4" class="answer-btn"></button>
             </div>
         </section>
-        <section id="score-section"></section>
+        <section id="score-section">
+            <h2>Scores</h2>
+            <div id="choice-scores">
+                <p>You scored (score goes here)</p>
+            </div>
+            <div id="highscore-scores">
+                <h3>Highscores</h3>
+                <ol>
+                    <li>Score goes here</li>
+                </ol>
+            </div>
+        </section>
     </main>
 
     <!-- Script -->
