Style welcome section

--- a/index.html
+++ b/index.html
@@ -19,20 +19,25 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main class="full-screen">
 
         <!-- Welcome section -->
         <section id="welcome-section">
+            <img src="assets/images/logo.webp" alt="quiz-logo" class="quiz-logo">
+            <hr>
             <div id="welcome-message">
                 <h2>Welcome to Quiz Crunch!</h2>
                 <p>You can choose your quiz mode below.</p>
                 <p>Create your own quiz by selecting a category, difficulty and number of questions (5-50), or go for
                     the gold in <em>High Score Mode</em>!</p>
             </div>
+            <hr>
             <div id="quiz-mode-buttons">
                 <button type="button" id="choose-quiz-btn">Choose My Quiz</button>
                 <button type="button" id="highscore-quiz-btn">Highscore Mode</button>
             </div>
+            <hr>
+            <img src="assets/images/logo.webp" alt="quiz-logo" class="quiz-logo">
         </section>
 
         <!-- Choices section -->
