Style question area for tablet size screens and larger

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
         <!-- Question section -->
         <section id="question-section">
-            <div id="ready-area" class="hidden">
+            <div id="ready-area">
                 <h2>Are you ready?</h2>
                 <button type="button" class="passion-font" id="play-btn">Let's Play!</button>
             </div>
             <div id="question-area">
-                <h4>Question Number: <span id="question-number">1</span></h4>
+                <h4>Question Number <span id="question-number">1</span></h4>
                 <h3 id="question-text">Question goes here</h3>
                 <div id="answer-area">
                     <button id="answer1" class="answer-btn passion-font">Answer 1</button>
