Add instruction to welcome section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <p class="passion-font">Create your own quiz by selecting a category, difficulty and number of questions
                     (5-50), or go for
                     the gold in High Score Mode!</p>
+                <p class="passion-font">Click the "Quiz Crunch" logo at the top of the page to start again or view high scores.</p>
             </div>
             <hr class="blue-line">
             <div id="quiz-mode-buttons">
