Add code to switch between sections from the welcome section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1 class="header-text">Quiz Crunch</h1>
+        <h1 id="header-text" class="header-text" tabindex="0">Quiz Crunch</h1>
     </header>
 
     <!-- Main -->
@@ -35,7 +35,7 @@
             </div>
             <hr class="blue-line">
             <div id="quiz-mode-buttons">
-                <button type="button" id="choose-quiz-btn" class="passion-font input-style">Choose My Quiz</button>
+                <button type="button" id="user-quiz-btn" class="passion-font input-style">Choose My Quiz</button>
                 <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Highscore Mode</button>
             </div>
             <hr class="blue-line">
@@ -82,7 +82,7 @@
                 <h2>Are you ready?</h2>
                 <button type="button" class="passion-font input-style" id="play-btn">Let's Play!</button>
             </div>
-            <div id="question-area">
+            <div id="game-area">
                 <h4>Question Number <span id="question-number">1</span></h4>
                 <h3 id="question-text">Question goes here</h3>
                 <div id="answer-area">
