Add username input to ready area

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <!-- Question section -->
         <section id="question-section">
             <div id="ready-area">
-                <h2>Are you ready?</h2>
+                <h2>Enter your name</h2>
+                <input type="text" id="user-name" class="passion-font input-style" placeholder="Your name">
                 <button type="button" class="passion-font input-style" id="play-btn">Let's Play!</button>
             </div>
             <div id="game-area">
