Add aria label to logo text for accessibility

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1 id="logo-text" tabindex="0">Quiz Crunch</h1>
+        <h1 id="logo-text" tabindex="0" aria-label="Go to welcome section">Quiz Crunch</h1>
     </header>
 
     <!-- Main -->
