--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <!-- Question section -->
         <section id="question-section">
             <div id="ready-area">
-                <h2>Enter your name</h2>
+                <h2>Ready to play?</h2>
+                <label for="user-name" class="passion-font">Enter your name</label>
                 <input type="text" id="user-name" class="passion-font input-style" placeholder="Your name">
                 <button type="button" class="passion-font input-style" id="play-btn">Let's Play!</button>
             </div>
