Add code to process category choice for API use

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <label for="category-choice">Category</label>
                 <select class="passion-font input-style" name="category" id="category-choice" required>
                     <option value="any">Any</option>
-                    <option value="general-knowlegde">General Knowledge</option>
+                    <option value="general-knowledge">General Knowledge</option>
                     <option value="games">Video Games</option>
                     <option value="music">Music</option>
                     <option value="sport">Sport</option>
