Add code to display play area and assign fetched questions to a variable

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div id="ready-area">
                 <h2>Ready to play?</h2>
                 <label for="user-name" class="passion-font">Enter your name</label>
-                <input type="text" id="user-name" class="passion-font input-style" placeholder="Your name">
-                <button type="button" class="passion-font input-style" id="play-btn">Let's Play!</button>
+                <input type="text" id="user-name" class="passion-font input-style" placeholder="Your name" required>
+                <button type="submit" class="passion-font input-style" id="play-btn">Let's Play!</button>
             </div>
             <div id="game-area">
                 <h4>Question Number <span id="question-number">1</span></h4>
