Add html and style for feedback text and reset to an empty string when a new question is displayed

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <button id="answer3" class="answer-btn passion-font input-style">Answer 3</button>
                     <button id="answer4" class="answer-btn passion-font input-style">Answer 4</button>
                 </div>
+                <h2 id="feedback-text">Correct!</h2>
             </div>
         </section>
 
