Add code to display score screen with users score

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <!-- Score section -->
         <section id="score-section">
             <h2>Scores</h2>
-            <div id="choice-scores">
-                <p class="passion-font">You scored <span id="choice-quiz-score">(score goes here)</span></p>
+            <div id="game-score">
+                <p class="passion-font" id="quiz-score">You scored</p>
             </div>
             <div id="highscore-scores">
                 <h3>Highscores</h3>
