Add and code a button to display scores section from the welcome section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button type="button" id="user-quiz-btn" class="passion-font input-style">Choose My Quiz</button>
                 <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Highscore Mode</button>
             </div>
+            <button type="button" id="show-scores-btn" class="passion-font input-style">Show Highscores</button>
             <hr class="blue-line">
             <img src="assets/images/logo.webp" alt="quiz-logo" class="quiz-logo">
         </section>
@@ -101,15 +102,15 @@
         <section id="score-section">
             <h2>Scores</h2>
             <div id="game-score">
-                <p class="passion-font" id="quiz-score">You scored</p>
+                <p class="passion-font" id="quiz-score">No quiz score yet</p>
             </div>
             <div id="highscore-scores">
                 <h3>Highscores</h3>
                 <ol id="highscore-quiz-scores" class="passion-font">
-                    <li>Score goes here</li>
+                    <li>No scores to display</li>
                 </ol>
             </div>
-            <button type="button" class="passion-font input-style" id="play-again">Play Again</button>
+            <button type="button" class="passion-font input-style" id="play-again">Play New Quiz</button>
         </section>
     </main>
 
