Add code to display highscores from local storage

--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
             <div id="game-score">
                 <p class="passion-font" id="quiz-score">No quiz score yet</p>
             </div>
-            <div id="highscore-scores">
+            <div id="highscore-container">
                 <h3>Highscores</h3>
-                <ol id="highscore-quiz-scores" class="passion-font">
-                    <li>No scores to display</li>
+                <ol id="highscores" class="passion-font">
                 </ol>
             </div>
             <button type="button" class="passion-font input-style" id="play-again">Play New Quiz</button>
