--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Quiz Crunch</title>
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 
 <body>
@@ -55,6 +59,7 @@
                     required>
                 <label for="category-choice">Category</label>
                 <select class="passion-font input-style" name="category" id="category-choice" required>
+                    <option value="">Choose Category</option>
                     <option value="any">Any</option>
                     <option value="general-knowledge">General Knowledge</option>
                     <option value="games">Video Games</option>
