--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <div id="welcome-message">
                 <p class="passion-font">You can choose your quiz mode below.</p>
                 <p class="passion-font">Create your own quiz by selecting a category, difficulty and number of questions
-                    (5-50), or go for
-                    the gold in High Score Mode!</p>
-                <p class="passion-font">Click the "Quiz Crunch" logo at the top of the page to start again or view high scores.</p>
+                    (5-50), or play 50 random questions in High Score Mode!</p>
+                <p class="passion-font">Click the "Quiz Crunch" logo at the top of the page to return here. (quiz progress will not be saved)</p>
             </div>
             <hr class="blue-line">
             <div id="quiz-mode-buttons">
@@ -43,8 +42,6 @@
                 <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Highscore Mode</button>
             </div>
             <button type="button" id="show-scores-btn" class="passion-font input-style">Show Highscores</button>
-            <hr class="blue-line">
-            <img src="assets/images/logo.webp" alt="quiz-logo" class="quiz-logo">
         </section>
 
         <!-- Choices section -->
@@ -79,7 +76,7 @@
                 <button class="passion-font input-style" type="submit" id="submit-choices">Get Questions</button>
             </form>
             <hr class="blue-line">
-            <img src="assets/images/logo.webp" alt="quiz-logo" class="quiz-logo">
+            <p class="passion-font">Quiz scores still count towards highscores</p>
         </section>
 
         <!-- Question section -->
