Change high-score mode name to -marathon mode- and change form button colour styling

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <div id="welcome-message">
                 <p class="passion-font">You can choose your quiz mode below.</p>
                 <p class="passion-font">Create your own quiz by selecting a category, difficulty and number of questions
-                    (5-50), or play 50 random questions in High Score Mode!</p>
+                    (5-50), or play 50 random questions in Marathon Mode!</p>
                 <p class="passion-font">Click the "Quiz Crunch" logo at the top of the page to return here. (quiz progress will not be saved)</p>
             </div>
             <hr class="blue-line">
             <div id="quiz-mode-buttons">
                 <button type="button" id="user-quiz-btn" class="passion-font input-style">Choose My Quiz</button>
-                <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Highscore Mode</button>
+                <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Marathon Mode</button>
             </div>
             <button type="button" id="show-scores-btn" class="passion-font input-style">Show Highscores</button>
         </section>
