Add manual testing to TESTING file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" id="user-quiz-btn" class="passion-font input-style">Choose My Quiz</button>
                 <button type="button" id="highscore-quiz-btn" class="passion-font input-style">Marathon Mode</button>
             </div>
-            <button type="button" id="show-scores-btn" class="passion-font input-style">Show Highscores</button>
+            <button type="button" id="show-scores-btn" class="passion-font input-style">Show High Scores</button>
         </section>
 
         <!-- Choices section -->
