Fix 404 page home link

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="/index.html" class="home-link">Quiz Crunch</a>
+        <a href="index.html" class="home-link">Quiz Crunch</a>
     </header>
     <main>
         <section id="error">
