Add comment to 404.html

--- a/404.html
+++ b/404.html
@@ -21,6 +21,8 @@
     <header>
         <a href="index.html" class="home-link">Quiz Crunch</a>
     </header>
+    
+    <!-- Main -->
     <main>
         <section id="error">
             <h1 class="error-message">404</h1>
